# monzo-crawler

./: README.md  config.yaml  exceptions.py  main.py  out_file_20240820_215252.json  pyproject.toml  utils.py
config/: config.py  dev.yaml  logger.py  release.yaml
crawler/: crawler.py  parser.py  robots_parser.py  url_manager.py
tests/: test_crawler.py  test_parser.py  test_url_manager.py
